# h-tautau

./: CMakeLists.txt  install_framework.sh
Analysis/include/: EventCacheProvider.h  EventInfo.h  HH_BTag.h
Analysis/source/: nutella.cxx
Analysis/src/: EventCacheProvider.cpp  EventInfo.cpp  HH_BTag.cpp  SignalObjectSelector.cpp
Core/: BuildFile.xml
Core/include/: CacheTuple.h  EventTuple.h
Core/src/: TupleObjects.cpp
Instruments/source/: CacheTupleProducer.cxx
McCorrections/data/2016/: pileup_groups_2016.txt  pu_mc_distr_per_sample_100_100_2016.root
McCorrections/include/: LeptonWeights.h
McCorrections/src/: EventWeights.cpp  LeptonWeights.cpp
Print/config/: IT_LLR_Sync.cfg  IT_LLR_Sync_Data.cfg
Production/crab/config/2017/: VBF_HH.txt
Production/crab/config/2018/: VBF_Radion.txt
Production/interface/: BaseTupleProducer.h
Production/plugins/: TupleProducer_eTau.cc  TupleProducer_muTau.cc
Production/python/: Production.py
Production/src/: BaseTupleProducer.cc
